<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/light_grey"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/genreRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintBottom_toTopOf="@+id/editTextMemo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed">

        <RadioButton
            android:id="@+id/genre0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre0"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/genre1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/genre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/genre3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre3"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/genre4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre4"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/genre5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre5"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/genre6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre6"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/genre7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre7"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/genre8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre8"
            android:textSize="20sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextMemo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/memo"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/keep_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreRadioGroup" />


    <Button
        android:id="@+id/keep_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/keep_shape"
        android:text="@string/keep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMemo" />

</androidx.constraintlayout.widget.ConstraintLayout>
